# procon2025

./: .gitignore  README.md  problem.c
Matsumoto/fix_pos6/: CMakeLists.txt  makefile  note.txt  out.txt
Matsumoto/fix_pos6/inc/: all.hpp  beamsearch.hpp  bfs_result.hpp  connection.hpp  field.hpp  state.hpp  utilities.hpp
Matsumoto/fix_pos6/src/: CMakeLists.txt  beamsearch.cpp  bfs_result.cpp  connection.cpp  field.cpp  main.cpp  state.cpp  utilities.cpp
Minami/: note.txt
Minami/fix_pos10/: data_path.txt  makefile  note.txt
Minami/fix_pos11/: data_path.txt  makefile  note.txt
Minami/fix_pos6/: makefile
Minami/simple_beamsearch/: out.txt  out10_1.txt  out10_2.txt  out10_3.txt  out10_4.txt  out10_5.txt  out12_1.txt  out12_2.txt  out12_3.txt  out12_4.txt  out12_5.txt  out8_1.txt  out8_2.txt  out8_3.txt  out8_4.txt  out8_5.txt  output.txt
algo1_5db/: lib.py  save.py  test.py  test2.py  test3.py
algo1_5db/2/: main.py  save.py  test.py  test2.py  test3.py
algo1_5db/3/: lib.py  main.py  save.py  test.py
algo1_5db/c/: Makefile
algo1_5db/horizon/: lib.py  save.py
algo1_5db/save2/: check.py  lib.py  save.py
algo1_5db/save3/: lib.py  save.py
base/: Makefile  algorithm_evaluation.py
base/inc/: BitField.hpp  Field.hpp  algo.hpp  algo1_2.hpp  algo1_3.hpp  algo1_4.hpp  algo2_1.hpp  algo3_1.hpp  algolib1_1.hpp  fielddb.hpp
base/src/: BField.cpp  BitField.cpp  Field.cpp  (+17 more)
documents/: procon_panf (1).docx  応募.docx  駒動き考察.xlsx
field4db/: autoSet4Answer.py  field4lib.py  requirements.txt  test.py
field6db/: autoSet4Anser.py  autoSet6Answer.py  field6lib.py  requirements.txt  test.py
make_bfs_result/: note.txt
problem/: case_01.csv  sample.csv
server/: server.py
visualizer1/: class_ope.pde  main.pde
visualizer2/: UI.js  index.html  solve.js  style.css
(+97 files in other folders)
